--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -17,6 +17,25 @@
   "No cards": "Brak kart",
   "Card successfully deleted": "Pomyślnie usunięto kartę",
   "Your Cards!": "Twoje karty!",
+  "You must add your image!": "Musisz dodać swój obrazek!",
+  "Successfully added card": "Dodano karte",
+  "I'm happy": "Jestem szczęśliwy",
+  "Caption": "Napis",
+  "Choose image": "Wybierz obrazek",
+  "Choose caption color": "Kolor napisu",
+  "Choose background color": "Kolor tła",
+  "Download card": "Pobierz kartę",
+  "Overwrite card": "Nadpisz kartę",
+  "Add card": "Dodaj kartę",
+  "Edit your card": "Edytuj kartę",
+  "Font size": "Rozmiar napisu",
+  "Space": "Odległość",
+  "Image size": "Rozmiar obrazka",
+  "Image position": "Pozycja obrazka",
+  "What can I do in this application?": "Co mogę robić w tej aplikacji?",
+  "In this application you can create cards to help communication with mute people. You can download and print them.": "Możesz tworzyć karty pomagające w komunikacji z osobami cierpiącymi na problemy z mową lub słuchem. Stworzone karty możesz pobierać i drukować.",
+  "Where can I send informations about bugs/features?": "Gdzie mogę wysłać informację, gdy w aplikacji coś nie działa lub mam pomysł na ulepszenie jej?",
+  "To my e-mail czaplickibartosz0@gmail.com": "Na mój email: czaplickibartosz0@gmail.com",
   "User not found": "Nie znaleziono użytkownika",
   "Logout failed. Try again or report the problem to us.": "Wylogowanie nie powiodło się. Spróbuj ponownie lub zgłoś nam problem.",
   "loginView": {
