Fix my email in FAQ

--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -35,7 +35,7 @@
   "What can I do in this application?": "Co mogę robić w tej aplikacji?",
   "In this application you can create cards to help communication with mute people. You can download and print them.": "Możesz tworzyć karty pomagające w komunikacji z osobami cierpiącymi na problemy z mową lub słuchem. Stworzone karty możesz pobierać i drukować.",
   "Where can I send informations about bugs/features?": "Gdzie mogę wysłać informację, gdy w aplikacji coś nie działa lub mam pomysł na ulepszenie jej?",
-  "To my e-mail czaplickibartosz0@gmail.com": "Na mój email: czaplickibartosz0@gmail.com",
+  "To my e-mail bartoszczaplicki0@gmail.com": "Na mój email: bartoszczaplicki0@gmail.com",
   "User not found": "Nie znaleziono użytkownika",
   "Logout failed. Try again or report the problem to us.": "Wylogowanie nie powiodło się. Spróbuj ponownie lub zgłoś nam problem.",
   "loginView": {
